noinst_LTLIBRARIES = libapi.la

libapi_la_SOURCES = audio/echo_canceller3_config.cc \
		    audio/echo_canceller3_config.h \
		    audio/audio_frame.cc \
		    audio/audio_frame.h

libapi_la_CXXFLAGS = $(AM_CXXFLAGS) $(COMMON_CXXFLAGS)

EXTRA_DIST = video/video_rotation.h \
	     video/video_content_type.h
